test/fails/bad_tags/mult8.lgl
tag a is vec<2>;
tag b is vec<3>;
tag c is b;
tag d is b;

void main() {
    b y = [2., 1., 2.];

    c->b c_b = [[1., 1., 1.], [1., 1., 1.], [1., 1., 1.]];
    d->b d_b = [[1., -1., 1.], [-1., 1., 1.], [1., 1., -1.]];

    b fail = (d_b + c_b) * y; // Vector must be bottom type
}